--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   </head>
 <body>
 
-    <div id="imageService"></div>
+    <div id="image-service"></div>
     <!-- about service will be rendered here because there is render inside bundled file -->
     <div id="about"></div>
     <div id="product-size"></div>
@@ -22,12 +22,30 @@
   <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 
+  <!-- VIRGINIA'S OLD -->
+  <!-- <script src="http://localhost:3002/bundle.js" ></script> -->
+  <!-- VIRGINIA AWS -->
+  <!-- <script src="http://ec2-18-221-34-3.us-east-2.compute.amazonaws.com:3002/bundle.js"></script> -->
+
+  <!-- KIM'S SERVICE OLD -->
+  <!-- <script src="http://localhost:3003/dist/bundle.js" ></script> -->
+  <!-- KIM'S SERVICE AWS -->
+  <script src="http://ec2-3-86-58-21.compute-1.amazonaws.com:3003/dist/bundle.js" ></script>
+
+  <!-- PHUCCI'S SERVICE OLD -->
+  <!-- <script src="http://localhost:3004/index.js" ></script> -->
+  <!-- PHUCCI'S SERVICE AWS -->
+  <script src="http://ec2-54-67-28-46.us-west-1.compute.amazonaws.com:4004/index.js" ></script>
+
+
+  <!-- JOSH's OLD ? -->
   <!-- <script src="http://localhost:3001/bundle.js" ></script> -->
-  <script src="http://localhost:3002/bundle.js" ></script>
-  <script src="http://localhost:3003/dist/bundle.js" ></script>
-  <script src="http://localhost:3004/index.js" ></script>
+  <!-- JOSH's SERVICE AWS -->
+  <script src="http://ec2-100-25-191-161.compute-1.amazonaws.com/bundle.js" ></script>
+
+
   <script>
-    ReactDOM.render(React.createElement(ImagesService), document.getElementById('imageService'));
+    // ReactDOM.render(React.createElement(ImagesService), document.getElementById('imageService'));
     // ReactDOM.render(React.createElement(Review), document.getElementById('reviewService'));
   </script>
 </html>
